--- a/resources/main.css
+++ b/resources/main.css
@@ -78,7 +78,7 @@ aside h3 {
 }
 
 article {
-    grid-row-start: 2;
+    /*grid-row-start: 2;*/
     grid-column-start: 2;
     grid-column-end: 3;
 }
