--- a/resources/main.css
+++ b/resources/main.css
@@ -77,7 +77,7 @@ aside h3 {
     padding: 0.25em 0.5em;
 }
 
-article {
+main, article {
     /*grid-row-start: 2;*/
     grid-column-start: 2;
     grid-column-end: 3;
