add blurb at end of story

--- a/resources/main.css
+++ b/resources/main.css
@@ -182,3 +182,9 @@ header h1 a, header h2 a{
 }
 
 
+div.blurb {
+    border: 1px solid #dddddd;
+    padding: 1.0rem;
+    border-radius: 0.5rem;
+    background-color: #f0f0f0;
+}
